--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -23,6 +23,7 @@ a {
 }
 
 a:hover {
+    text-shadow: 2px 2px 5px gray;
     background-color: rgb(255, 102, 0);
     color: greenyellow;
 }
@@ -105,6 +106,9 @@ footer {
 
 /*footer*/
 
+
+/*home*/
+
 #home {
     background-image: url(../image/banner.jpg);
     height: 500px;
@@ -119,46 +123,83 @@ footer {
     /*image doesn't repeat */
     background-attachment: inherit;
     /*image fixed when scrolling */
-    margin: 2%;
+    margin: 15px;
     border: #e31010 solid;
+    border-radius: 20px;
 }
 
 .text {
     padding-top: 20px;
     text-align: center;
-    font-size: 35px;
-    color: paleturquoise;
+    font-size: 100px;
+    color: #003366;
 }
 
 .text2 {
+    font-weight: bold;
     text-align: center;
-    font-size: 20px;
-    color: black;
+    font-size: 50px;
+    color: rgb(210, 247, 6);
 }
 
-#about h2 {
-    text-align: center;
-}
-/*service section*/
-/* Global Styles */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/*home*/
 
-body {
-    font-family: 'Poppins', sans-serif;
-    background: url('https://i.ibb.co/rGktN9J4') no-repeat center center fixed;
-    background-size: cover;
-    color: #333;
-    line-height: 1.6;
+
+/* About Section */
+
+.about-section {
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: space-between;
+    align-items: center;
     padding: 2rem;
+    margin: 15px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: gainsboro;
 }
 
-/* Section Styles */
+.about-content {
+    flex: 1 1 60%;
+    padding: 1rem;
+    margin-right: 100px;
+}
+
+.about-content h1 {
+    font-size: 2.5rem;
+    color: #0056D2;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.about-content p {
+    font-size: 1.1rem;
+    line-height: 1.8;
+    color: black;
+    margin-bottom: 1rem;
+}
+
+.about-image {
+    flex: 1 1 40%;
+    padding: 50px;
+    padding-left: 30px;
+}
+
+.about-image img {
+    height: 500px;
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+}
+
+
+/* About Section */
+
+
+/*service section*/
+
 .services-section {
     max-width: 1200px;
     margin: 0 auto;
@@ -182,7 +223,9 @@ body {
     color: #555;
 }
 
+
 /* Service Boxes */
+
 .services-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -231,7 +274,9 @@ body {
     background: rgba(0, 86, 210, 0.9);
 }
 
+
 /*service section*/
+
 .goal-section {
     background-color: #a34678;
     margin: 20px;
