--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -39,12 +39,12 @@ header {
     position: sticky;
     top: 0;
     size: 20px;
+    background-color: rgb(10, 202, 250);
 }
 
 .internal-wrapper {
     display: flex;
     justify-content: space-between;
-    background-color: rgb(54, 42, 42);
     padding: 20px 20px 10px 20px;
     margin-bottom: 10px;
 }
@@ -81,11 +81,15 @@ header {
 /*footer*/
 
 footer {
-    background-color: rgba(100, 97, 97, 0.849);
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     margin: 20px;
-    padding: 30px;
-    border-radius: 30px;
+    border-radius: 15px;
+    font-size: 20px;
+}
+
+.footer-bgc {
+    background-color: rgb(10, 202, 250);
+    padding: 25px;
 }
 
 .internal-footer {
@@ -94,14 +98,15 @@ footer {
 }
 
 .copyright {
+    background-color: rgb(137, 186, 199);
     display: flex;
-    justify-content: right;
-    padding: 20px 0 0 20px;
-    margin-right: 10px;
+    justify-content: center;
+    padding-top: 20px;
+    /* margin-right: 5px; */
 }
 
 .logo-footer {
-    width: 5px;
+    width: 0.9%;
     padding-bottom: 10px;
     margin-bottom: 2px;
 }
@@ -174,7 +179,7 @@ footer {
     margin-right: 100px;
 }
 
-.about-content h1 {
+.about-content h2 {
     font-size: 2.5rem;
     color: #0056D2;
     margin-bottom: 1rem;
