--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -321,8 +321,7 @@ footer {
     padding: 1.5rem;
     border: 1px solid #e0e0e0;
     border-radius: 10px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);  
 }
 .goal:hover{
     transform: translateY(-30px);
@@ -336,7 +335,10 @@ footer {
     border: 1px solid #e0e0e0;
     border-radius: 10px;
     box-shadow: 4px  8px 10px 8px rgba(0, 0, 0, 0.2);
-
+}
+.achieve:hover{
+    transform:  translateY(-30px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 /* goals */
