--- a/Web Folder/CSS/Style.css
+++ b/Web Folder/CSS/Style.css
@@ -50,7 +50,8 @@
     
     .logo-wrapper {
         display: flex;
-        width: 40%;
+        width: 10%;
+        margin-right: 30px;
     }
     
     .logo-wrapper h1 {
@@ -63,7 +64,12 @@
         width: 45px;
     }
     
+    .ul-wrapper a {
+        font-size: 25px;
+    }
+    
     .ul-wrapper {
+        padding-left: 50px;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -215,7 +221,7 @@
     /*service section*/
     
     .services-section {
-        max-width: 1200px;
+        max-width: 95%;
         margin: 0 auto;
         background: rgba(255, 255, 255, 0.8);
         padding: 2rem;
@@ -224,15 +230,15 @@
         text-align: center;
     }
     
-    .services-section h1 {
-        font-size: 2.8rem;
+    .services-section h2 {
+        font-size: 33px;
         margin-bottom: 1rem;
         color: #0056D2;
         font-weight: 600;
     }
     
     .services-section p {
-        font-size: 1.1rem;
+        font-size: 30px;
         margin-bottom: 2rem;
         color: #555;
     }
@@ -269,6 +275,7 @@
         font-size: 1rem;
         margin-bottom: 1rem;
         color: #666;
+        font-size: 30px;
     }
     
     .service-box a {
@@ -301,6 +308,7 @@
         background-color: #ddd;
         border-radius: 15px;
         height: 150hv;
+        font-size: 30px;
     }
     
     .goal {
@@ -326,6 +334,7 @@
         border: 1px solid #e0e0e0;
         border-radius: 10px;
         box-shadow: 4px 8px 10px 8px rgba(0, 0, 0, 0.2);
+        font-size: 30px;
     }
     
     .achieve:hover {
@@ -337,15 +346,14 @@
     
     .container {
         line-height: 3;
-        border-top-left-radius: 100px;
-        margin-left: 120px;
-        width: 75%;
+        width: 95%;
         background-color: #0a6375;
         color: white;
         text-transform: uppercase;
         font-style: italic;
         text-align: center;
-        border-bottom-right-radius: 100px;
+        border-radius: 20px;
+        justify-self: center;
     }
     
     #add {
@@ -402,26 +410,29 @@
         text-align: center;
         color: greenyellow;
         font-style: italic;
+        font-size: 30px;
         text-transform: uppercase;
     }
     
     .wrapper {
         background-color: #356fab;
-        width: 80%;
-        border-radius: 45px;
-        margin: 50px auto;
+        width: 95%;
+        border-radius: 15px;
+        margin: 60px;
         padding: 20px;
         height: 60vh;
+        justify-self: center;
     }
     
     table {
         background-color: #333;
-        width: 70%;
+        width: 90%;
         margin: 20px;
-        padding-top: 30px;
+        /* padding-top: 30px; */
         margin-left: 100px;
         border-collapse: separate;
         background-color: dodgerblue;
+        font-size: 30px;
         border-radius: 30px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
