--- a/Web Folder/CSS/Style.css
+++ b/Web Folder/CSS/Style.css
@@ -3,7 +3,7 @@
     
     * {
         /*remove default paddiin and margin*/
-        pad: 0;
+        padding: 0;
         margin: 0;
         font-family: Arial, sans-serif;
     }
@@ -210,12 +210,12 @@
     
     .about-image:hover {
         width: 55%;
-        transform: translateY(48px) scale(1.2);
+        transform: translateY(60px) scale(1.0);
     }
     
     .about-content:hover {
         width: 55%;
-        transform: translateY(48px) scale(1.2);
+        transform: translateY(60px) scale(1.0);
     }
     /* About Section */
     /*service section*/
@@ -330,7 +330,7 @@
         line-height: 1.2;
         font-family: 'Times New Roman', Times, serif;
         background: white;
-        padding: 2.5rem;
+        padding: 3.7rem;
         border: 1px solid #e0e0e0;
         border-radius: 10px;
         box-shadow: 4px 8px 10px 8px rgba(0, 0, 0, 0.2);
