--- a/PHPfolder/Login/css/LoginStyle.css
+++ b/PHPfolder/Login/css/LoginStyle.css
@@ -3,65 +3,64 @@ body {
     padding: 0;
     background-image: url(../Css/Image/bg.jpg);
     background-size: cover;
-    width: 100%;
+    width: 100vh;
     height: auto;
     font-family: sans-serif;
 }
 
-.box1 {
-    width: 500px;
-    height: 600px;
-    background-color: rgb(2, 0, 0.901);
+.box {
+    width: 250px;
+    height: 350px;
+    background-color: rgb(0, 0, 0.2);
     opacity: 80%;
     position: absolute;
     color: #fff;
     transform: translate(-50%, -50%);
-    left: 50%;
-    right: 50%;
+    left: 700px;
+    right: 400px;
     padding: 50px;
-    margin-top: 30%;
-    border-radius: 10%;
+    margin-top: 400px;
+    border-radius: 15%;
 }
 
 h1 {
     margin: 0;
-    padding: 0 0 20px;
+    padding: 20px;
     text-align: center;
     font-size: 25px;
 }
 
-.box1 input {
+.box input {
     width: 100%;
     margin-bottom: 20px;
     color: #fff;
 }
 
-.box1 input[type="text"],
-input[type="password"],
-input[type="email"] {
+.box input[type="text"],
+input[type="password"] {
     border: none;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #f7dbdb;
     background-color: transparent;
     outline: none;
-    height: 40px;
+    color: #fff;
     font-size: 15px;
 }
 
-.box1 input[type="submit"] {
+.box input[type="submit"] {
     border: none;
     outline: none;
     height: 40px;
-    background-color: aquamarine;
+    background-color: rgb(7, 255, 172);
     color: #fff;
     border-radius: 20px;
 }
 
-.box1 input[type="submit"]:hover {
+.box input[type="submit"]:hover {
     cursor: pointer;
     height: 40px;
     background-color: #ffc107;
 }
 
 .err {
-    color: #fff;
+    color: red;
 }
