--- a/PHPfolder/Login/css/LoginStyle.css
+++ b/PHPfolder/Login/css/LoginStyle.css
@@ -3,29 +3,29 @@ body {
     padding: 0;
     background-image: url(../Css/Image/bg.jpg);
     background-size: cover;
-    width: 100vh;
+    width: 100%;
     height: auto;
     font-family: sans-serif;
 }
 
 .box {
     width: 250px;
-    height: 250px;
-    background-color: rgb(0, 0, 0.2);
+    height: 300px;
+    background-color: rgb(2, 0, 0.901);
     opacity: 80%;
     position: absolute;
     color: #fff;
     transform: translate(-50%, -50%);
-    left: 700px;
-    right: 400px;
+    left: 50%;
+    right: 50%;
     padding: 50px;
-    margin-top: 400px;
+    margin-top: 30%;
     border-radius: 20%;
 }
 
 h1 {
     margin: 0;
-    padding: 20px;
+    padding: 0 0 20px;
     text-align: center;
     font-size: 25px;
 }
@@ -39,10 +39,10 @@ h1 {
 .box input[type="text"],
 input[type="password"] {
     border: none;
-    border-bottom: 1px solid #f7dbdb;
+    border-bottom: 1px solid #fff;
     background-color: transparent;
     outline: none;
-    color: #fff;
+    height: 40px;
     font-size: 15px;
 }
 
@@ -50,7 +50,7 @@ input[type="password"] {
     border: none;
     outline: none;
     height: 40px;
-    background-color: rgb(7, 255, 172);
+    background-color: aquamarine;
     color: #fff;
     border-radius: 20px;
 }
