--- a/PHPfolder/Login/css/SignupStyle.css
+++ b/PHPfolder/Login/css/SignupStyle.css
@@ -1,42 +1,42 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url(../css/Image/Signupbg.jpg);
+    background-image: url(../Css/Image/bg.jpg);
     background-size: cover;
     width: 100vh;
     height: auto;
     font-family: sans-serif;
 }
 
-.box1 {
-    width: 350px;
-    height: 500px;
+.box2 {
+    width: 310px;
+    height: 450px;
     background-color: rgb(2, 0, 0.901);
     opacity: 80%;
     position: absolute;
     color: #fff;
     transform: translate(-50%, -50%);
-    left: 500px;
-    right: 500px;
-    padding: 50px;
-    margin-top: 300px;
-    border-radius: 10%;
+    left: 50%;
+    right: 50%;
+    padding: 60px;
+    margin-top: 25%;
+    border-radius: 20%;
 }
 
 h1 {
     margin: 0;
-    padding: 0 0 20px;
+    padding-bottom: 20px;
     text-align: center;
     font-size: 25px;
 }
 
-.box1 input {
+.box2 input {
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     color: #fff;
 }
 
-.box1 input[type="text"],
+.box2 input[type="text"],
 input[type="password"],
 input[type="email"] {
     border: none;
@@ -47,7 +47,7 @@ input[type="email"] {
     font-size: 15px;
 }
 
-.box1 input[type="submit"] {
+.box2 input[type="submit"] {
     border: none;
     outline: none;
     height: 40px;
@@ -56,7 +56,7 @@ input[type="email"] {
     border-radius: 20px;
 }
 
-.box1 input[type="submit"]:hover {
+.box2 input[type="submit"]:hover {
     cursor: pointer;
     height: 40px;
     background-color: #ffc107;
